--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "babel src --out-dir ./ --copy-files",
     "dev": "babel src --out-dir ./ --copy-files -w",
+    "example": "yarn build && node ./example.js",
     "lint": "eslint src"
   },
   "author": {
@@ -22,7 +23,7 @@
     "email": "502556093@qq.com"
   },
   "license": "MIT",
-  "homepage": "https://github.com/faurewu/zoro",
+  "homepage": "https://github.com/FaureWu/zoro.git",
   "dependencies": {
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
