--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "roronoa-zoro",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "redux helper framework, complete async await, like dva-core",
-  "main": "index.js",
+  "main": "dist/index.js",
   "keywords": [
     "redux",
     "roronoa",
@@ -14,9 +14,9 @@
     "dva-like"
   ],
   "scripts": {
-    "build": "babel src --out-dir ./ --copy-files",
-    "dev": "babel src --out-dir ./ --copy-files -w",
-    "example": "yarn build && node ./example.js",
+    "build": "babel src --out-dir ./dist --copy-files",
+    "dev": "babel src --out-dir ./dist --copy-files -w",
+    "example": "yarn build && node ./dist/example.js",
     "lint": "eslint src"
   },
   "author": {
@@ -26,10 +26,13 @@
   "license": "MIT",
   "homepage": "https://github.com/FaureWu/zoro.git",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "redux": "^4.0.0"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
-    "babel-polyfill": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -39,11 +42,6 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "node-dev": "^3.1.3",
-    "prettier": "^1.13.5",
-    "redux": "^4.0.0"
-  },
-  "files": [
-    "index.js",
-    "plugin.js"
-  ]
+    "prettier": "^1.13.5"
+  }
 }
