--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roronoa-zoro",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "redux helper framework, complete async await, like dva-core",
   "main": "dist/index.js",
   "keywords": [
@@ -48,5 +48,8 @@
     "eslint-plugin-standard": "^3.1.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.13.5"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
