--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roronoa-zoro",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "redux helper framework, complete async await, like dva-core",
   "main": "dist/index.js",
   "keywords": [
@@ -50,6 +50,8 @@
     "prettier": "^1.13.5"
   },
   "files": [
-    "dist"
+    "dist/index",
+    "dist/plugin",
+    "dist/lib"
   ]
 }
