--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "roronoa-zoro",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "description": "redux helper framework, complete async await, like dva-core",
-  "main": "dist/index.js",
+  "main": "index.js",
   "keywords": [
     "redux",
     "roronoa",
@@ -14,9 +14,9 @@
     "dva-like"
   ],
   "scripts": {
-    "build": "babel src --out-dir ./dist --copy-files",
-    "dev": "babel src --out-dir ./dist --copy-files -w",
-    "example": "yarn build && node ./dist/example.js",
+    "build": "babel src --out-dir ./ --copy-files",
+    "dev": "babel src --out-dir ./ --copy-files -w",
+    "example": "yarn build && node ./example.js",
     "release": "yarn lint && yarn build && yarn publish",
     "lint": "eslint src",
     "test": "jest"
@@ -48,10 +48,5 @@
     "eslint-plugin-standard": "^3.1.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.13.5"
-  },
-  "files": [
-    "dist/index.js",
-    "dist/plugin.js",
-    "dist/lib"
-  ]
+  }
 }
