--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "homepage": "https://github.com/FaureWu/zoro.git",
   "dependencies": {
     "redux": "^4.0.0",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.12.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.52",
     "@babel/preset-env": "^7.0.0-beta.51",
     "babel-core": "^7.0.0-0",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "^23.4.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -47,6 +47,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.4.0",
     "node-dev": "^3.1.3",
     "prettier": "^1.13.5"
   }
