--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["@babel/env"]
+  "presets": [["@babel/preset-env", { "loose": true }]],
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-async-generator-functions"
+  ]
 }
