--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
   "presets": [["@babel/preset-env", { "loose": true }]],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-    "@babel/plugin-proposal-async-generator-functions"
-  ]
+  "plugins": ["@babel/plugin-proposal-async-generator-functions"]
 }
