--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "roronoa-zoro",
-  "version": "1.4.1",
+  "name": "@opcjs/zoro",
+  "version": "2.0.0",
   "description": "a redux framework, complete async await",
   "main": "index.js",
   "keywords": [
@@ -17,21 +17,16 @@
   ],
   "scripts": {
     "build": "npm run clean && npm run build:es && npm run build:cjs && npm run clean:free",
-    "build:es1": "rollup --config rollup.config.es.js",
     "build:es": "babel src --out-dir ./ --copy-files",
     "build:cjs": "rollup --config rollup.config.cjs.js",
-    "clean": "rm -rf ./dist ./lib ./example.js ./index.js ./plugin.js",
+    "clean": "rm -rf ./dist ./lib ./index.js ./plugin.js",
     "clean:free": "rm -rf ./regenerator.js ./weapp-redux.js",
     "dev": "babel src --out-dir ./ --copy-files -w",
-    "example": "npm run build && node ./example.js",
     "release": "npm run lint && npm run build && npm publish",
     "lint": "eslint src",
     "test": "jest"
   },
-  "author": {
-    "name": "Faure Wu",
-    "email": "502556093@qq.com"
-  },
+  "author": "Faure Wu <502556093@qq.com>",
   "license": "MIT",
   "homepage": "https://github.com/FaureWu/zoro.git",
   "dependencies": {
@@ -39,13 +34,12 @@
     "regenerator-runtime": "^0.12.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.55",
-    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.4.0",
-    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -56,12 +50,21 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.4.0",
-    "node-dev": "^3.1.3",
     "prettier": "^1.13.5",
-    "rollup": "^0.63.4",
-    "rollup-plugin-babel": "^4.0.0-beta.7",
-    "rollup-plugin-commonjs": "^9.1.4",
+    "rollup": "^0.65.0",
+    "rollup-plugin-babel": "^4.0.2",
+    "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0"
+  },
+  "directories": {
+    "doc": "doc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FaureWu/zoro.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FaureWu/zoro/issues"
   }
 }
