--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opcjs/zoro",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "a redux framework, complete async await",
   "main": "index.js",
   "keywords": [
@@ -18,9 +18,9 @@
   "scripts": {
     "build": "npm run clean && npm run build:es && npm run build:cjs && npm run clean:free",
     "build:es": "babel src --out-dir ./ --copy-files",
-    "build:cjs": "rollup --config rollup.config.cjs.js",
+    "build:cjs": "cross-env-shell \"rollup --config rollup.config.cjs.js && gulp replace:code\"",
     "clean": "rm -rf ./dist ./lib ./index.js ./plugin.js",
-    "clean:free": "rm -rf ./regenerator.js ./weapp-redux.js",
+    "clean:free": "rm -rf ./regenerator.js ./weapp-redux.js ./weapp-zoro.js",
     "dev": "babel src --out-dir ./ --copy-files -w",
     "release": "npm run lint && npm run build && npm publish --access=public",
     "lint": "eslint src",
@@ -40,6 +40,7 @@
     "@babel/preset-env": "^7.0.0",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.4.0",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -49,13 +50,15 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-replace-string": "^0.6.1",
     "jest": "^23.4.0",
     "prettier": "^1.13.5",
     "rollup": "^0.65.0",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0"
+    "rollup-plugin-replace": "^2.1.0"
   },
   "directories": {
     "doc": "doc"
