--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,7 @@
   "presets": [["@babel/preset-env", { "loose": true }]],
   "plugins": [
     "@babel/plugin-proposal-async-generator-functions",
-  ]
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties",
+  ],
 }
