--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@opcjs/zoro",
   "version": "2.3.3",
   "description": "a redux framework, complete async await",
-  "main": "index.js",
+  "main": "dist/zoro.umd.js",
+  "module": "dist/zoro.es.js",
   "keywords": [
     "wx",
-    "wx-redux",
     "weapp",
     "redux",
-    "roronoa",
     "zoro",
     "effect",
     "promise",
@@ -16,14 +15,11 @@
     "frontend"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:es && npm run build:cjs && npm run clean:free",
-    "build:es": "babel src --out-dir ./ --copy-files",
-    "build:cjs": "cross-env-shell \"rollup --config rollup.config.cjs.js && gulp replace:code\"",
-    "clean": "rm -rf ./dist ./lib ./index.js ./plugin.js",
-    "clean:free": "rm -rf ./regenerator.js ./weapp-redux.js ./weapp-zoro.js",
-    "dev": "babel src --out-dir ./ --copy-files -w",
+    "build": "npm run clean && cross-env NODE_ENV=production rollup --config rollup.config.js && rollup --config rollup.config.weapp.js",
+    "clean": "rm -rf ./dist",
     "release": "npm run lint && npm run build && npm publish --access=public",
     "lint": "eslint src",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "jest"
   },
   "author": "Faure Wu <502556093@qq.com>",
@@ -35,12 +31,20 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.4.0",
+    "commitizen": "^3.0.5",
+    "conventional-changelog": "^3.0.6",
+    "conventional-changelog-cli": "^2.0.12",
     "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
@@ -52,6 +56,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-replace-string": "^0.6.1",
+    "husky": "^1.3.1",
     "jest": "^23.4.0",
     "prettier": "^1.13.5",
     "rollup": "^0.65.0",
@@ -69,5 +74,19 @@
   },
   "bugs": {
     "url": "https://github.com/FaureWu/zoro/issues"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"]
   }
 }
