--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
   "trailingComma": "all",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
-  "parser": "babylon",
+  "parser": "babel",
   "semi": false
 }
