refactor(3.0.0): support the typescript
create the base project for support typescript

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,38 @@
 {
   "extends": [
-    "eslint-config-alloy/typescript"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/eslint-recommended"
   ],
+  "plugins": ["prettier", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "jest": true
+  },
   "rules": {
-    "@typescript-eslint/indent": ["error", 2, { "SwitchCase": 1, "flatTernaryExpressions": true }]
+    "@typescript-eslint/indent": [
+      "error",
+      2,
+      { "SwitchCase": 1, "flatTernaryExpressions": true }
+    ],
+    "indent": [
+      "error",
+      2,
+      {
+        "SwitchCase": 1,
+        "flatTernaryExpressions": true
+      }
+    ],
+    "@typescript-eslint/semi": "off",
+    "prettier/prettier": "error",
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
