feat(model class): create the zoro model class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "importHelpers": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "types": ["jest", "prettier"]
+    "noUnusedLocals": true
   },
   "exclude": [
     "node_modules",
