feat(plugin): create the plguin event base

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
       2,
       { "SwitchCase": 1, "flatTernaryExpressions": true }
     ],
+    "comma-dangle": "off",
     "indent": [
       "error",
       2,
