feat(zoro-core): create the zoro main lib

--- a/.eslintrc
+++ b/.eslintrc
@@ -37,5 +37,8 @@
     "@typescript-eslint/semi": "error",
     "prettier/prettier": "error",
     "@typescript-eslint/no-explicit-any": "off"
+  },
+  "globals": {
+    "Promise": true
   }
 }
