--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opcjs/zoro",
-  "version": "3.0.0-beta0",
+  "version": "3.0.0-beta2",
   "description": "a redux framework, complete async await",
   "main": "dist/zoro.umd.js",
   "module": "dist/zoro.es.js",
@@ -81,7 +81,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "npm run jest && npm run lint"
+      "pre-push": "npm run test && npm run lint"
     }
   },
   "commitlint": {
