--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opcjs/zoro",
-  "version": "3.0.0-beta5",
+  "version": "3.0.0-beta6",
   "description": "a redux framework, complete async await",
   "main": "dist/zoro.umd.js",
   "module": "dist/zoro.es.js",
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "build": "npm run clean && cross-env NODE_ENV=production rollup --config rollup.config.ts && npm run build:weapp",
-    "build:weapp": "cross-env-shell NODE_ENV=production \"rollup --config rollup.config.weapp.ts && gulp replace:code\"",
+    "build:weapp": "cross-env-shell NODE_ENV=production \"rollup --config rollup.config.weapp.ts && gulp replace:code && gulp copy:type\"",
     "clean": "rm -rf ./dist",
     "release": "npm run lint && npm run test && npm run build && npm publish --access=public",
     "beta": "npm run lint && npm run test && npm run build && npm publish --tag=beta",
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.0",
     "gulp": "^4.0.2",
+    "gulp-rename": "^1.4.0",
     "gulp-replace-string": "^0.6.1",
     "husky": "^2.4.0",
     "jest": "^24.8.0",
